// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-set > slot setted value (with t-set) not accessible with t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, markRaw, createComponent } = helpers;
  const comp1 = createComponent(app, \`Childcomp\`, true, true, false, []);
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/><p><block-child-2/></p></div>\`);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'inCall';
  return text('');
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'source';
    const b2 = safeOutput(ctx['iter']);
    const b3 = comp1({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__1\`, node, this, null);
    const b4 = safeOutput(ctx['iter']);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > slot setted value (with t-set) not accessible with t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['iter']);
    ctx["iter"] = 'called';
    const b3 = safeOutput(ctx['iter']);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-set > slots with a t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { LazyValue, createComponent, withDefault, safeOutput, markRaw } = helpers;
  const comp1 = createComponent(app, \`C\`, true, false, false, []);
  const comp2 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`v\`] = new LazyValue(value1, ctx, this, node, key);
    const b3 = text(\` in slot \`);
    const b4 = safeOutput(ctx['v']);
    return multi([b3, b4]);
  }
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__2\`, node, this, null);
  }
}"
`;

exports[`t-set > slots with a t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`Child \`);
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return multi([b2, b3]);
  }
}"
`;

exports[`t-set > slots with a t-set with a component in body 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`C\`);
  }
}"
`;

exports[`t-set > slots with an t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { LazyValue, createComponent, withDefault, safeOutput, markRaw } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`Blorg\`, true, true, false, []);
  
  let block4 = createBlock(\`<div>coffee</div>\`);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`v\`] = new LazyValue(value1, ctx, this, node, key);
    const b5 = text(\` tea \`);
    const b6 = safeOutput(ctx['v']);
    return multi([b5, b6]);
  }
  
  function value1(ctx, node, key = "") {
    const b3 = comp1({}, key + \`__1\`, node, this, null);
    const b4 = block4();
    return multi([b3, b4]);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__2\`, node, this, null);
  }
}"
`;

exports[`t-set > slots with an t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`Blorg \`);
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return multi([b2, b3]);
  }
}"
`;

exports[`t-set > slots with an t-set with a component in body 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`Child\`);
  }
}"
`;

exports[`t-set > slots with an unused t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { LazyValue, createComponent, withDefault, markRaw } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`Child\`, true, true, false, []);
  
  function slot1(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`v\`] = new LazyValue(value1, ctx, this, node, key);
    return text(\` in slot \`);
  }
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    return comp2({slots: markRaw({'default': {__render: slot1.bind(this), __ctx: ctx}})}, key + \`__2\`, node, this, null);
  }
}"
`;

exports[`t-set > slots with an unused t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { callSlot } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`Child \`);
    const b3 = callSlot(ctx, node, key, 'default', false, {});
    return multi([b2, b3]);
  }
}"
`;

exports[`t-set > t-set can't alter component even if key in component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><p><block-child-1/></p><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].iter);
    ctx["iter"] = 5;
    const b3 = safeOutput(ctx['this'].iter);
    const b4 = safeOutput(ctx['iter']);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set can't alter component if key not in component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><p><block-child-1/></p><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].iter);
    ctx["iter"] = 5;
    const b3 = safeOutput(ctx['this'].iter);
    const b4 = safeOutput(ctx['iter']);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set in t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    ctx["flag"] = ctx['this'].state.flag;
    if (ctx['flag']==='if') {
      ctx["iter"] = 2;
    } else if (ctx['flag']==='elif') {
      ctx["iter"] = 3;
    } else {
      ctx["iter"] = 4;
    }
    b2 = safeOutput(ctx['iter']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set not altered by child comp 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Childcomp\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><p><block-child-0/></p><block-child-1/><p><block-child-2/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["iter"] = 'source';
    const b2 = safeOutput(ctx['iter']);
    const b3 = comp1({}, key + \`__1\`, node, this, null);
    const b4 = safeOutput(ctx['iter']);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set not altered by child comp 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/><block-child-2/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const b2 = safeOutput(ctx['this'].iter);
    ctx["iter"] = 'called';
    const b3 = safeOutput(ctx['this'].iter);
    const b4 = safeOutput(ctx['iter']);
    return block1([], [b2, b3, b4]);
  }
}"
`;

exports[`t-set > t-set outside modified in t-if 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><p><block-child-0/></p></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    let b2;
    ctx["iter"] = 0;
    ctx["flag"] = ctx['this'].state.flag;
    if (ctx['flag']==='if') {
      ctx["iter"] = 2;
    } else if (ctx['flag']==='elif') {
      ctx["iter"] = 3;
    } else {
      ctx["iter"] = 4;
    }
    b2 = safeOutput(ctx['iter']);
    return block1([], [b2]);
  }
}"
`;

exports[`t-set > t-set with a component in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { LazyValue, createComponent, withDefault, safeOutput } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  
  function value1(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`v\`] = new LazyValue(value1, ctx, this, node, key);
    const b3 = safeOutput(ctx['v']);
    return block1([], [b3]);
  }
}"
`;

exports[`t-set > t-set with a component in body 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`Child\`);
  }
}"
`;

exports[`t-set > t-set with something in body 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { LazyValue, withDefault, safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  let block2 = createBlock(\`<p>coucou</p>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`v\`] = new LazyValue(value1, ctx, this, node, key);
    const b3 = safeOutput(ctx['v']);
    return block1([], [b3]);
  }
}"
`;
